stp/src/parser/parsesmt.output
Terminals which are not used

   EXISTS_TOK
   FORALL_TOK
   NOTES_TOK
   CVC_COMMAND_TOK
   SORTS_TOK
   FUNS_TOK
   PREDS_TOK
   EXTENSIONS_TOK
   DEFINITION_TOK
   AXIOMS_TOK
   EXTRASORTS_TOK
   LANGUAGE_TOK
   SEMICOLON_TOK
   EOF_TOK
   NAND_TOK
   NOR_TOK
   NEQ_TOK
   ASSIGN_TOK
   BV_TOK
   BOOLEAN_TOK
   BOOLEXTRACT_TOK
   BOOL_TO_BV_TOK


State 156 conflicts: 36 shift/reduce
State 159 conflicts: 36 shift/reduce


Grammar

    0 $accept: cmd $end

    1 cmd: benchmark

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name bench_attributes RPAREN_TOK

    3 bench_name: STRING_TOK

    4 bench_attributes: bench_attribute
    5                 | bench_attributes bench_attribute

    6 bench_attribute: COLON_TOK ASSUMPTION_TOK an_formula
    7                | COLON_TOK FORMULA_TOK an_formula
    8                | COLON_TOK STATUS_TOK status
    9                | COLON_TOK LOGIC_TOK logic_name
   10                | COLON_TOK EXTRAFUNS_TOK LPAREN_TOK var_decls RPAREN_TOK
   11                | COLON_TOK EXTRAPREDS_TOK LPAREN_TOK var_decls RPAREN_TOK
   12                | annotation

   13 logic_name: STRING_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   14           | STRING_TOK

   15 status: SAT_TOK
   16       | UNSAT_TOK
   17       | UNKNOWN_TOK

   18 annotation: attribute
   19           | attribute user_value

   20 user_value: USER_VAL_TOK

   21 attribute: COLON_TOK SOURCE_TOK
   22          | COLON_TOK CATEGORY_TOK
   23          | COLON_TOK DIFFICULTY_TOK

   24 sort_symbs: sort_symb
   25           | sort_symb sort_symb

   26 var_decls: var_decl
   27          | var_decls var_decl

   28 var_decl: LPAREN_TOK STRING_TOK sort_symbs RPAREN_TOK
   29         | LPAREN_TOK STRING_TOK RPAREN_TOK

   30 an_formulas: an_formula
   31            | an_formulas an_formula

   32 an_formula: TRUE_TOK
   33           | FALSE_TOK
   34           | fvar
   35           | LPAREN_TOK EQ_TOK an_term an_term RPAREN_TOK
   36           | LPAREN_TOK DISTINCT_TOK an_terms RPAREN_TOK
   37           | LPAREN_TOK BVSLT_TOK an_term an_term RPAREN_TOK
   38           | LPAREN_TOK BVSLE_TOK an_term an_term RPAREN_TOK
   39           | LPAREN_TOK BVSGT_TOK an_term an_term RPAREN_TOK
   40           | LPAREN_TOK BVSGE_TOK an_term an_term RPAREN_TOK
   41           | LPAREN_TOK BVLT_TOK an_term an_term RPAREN_TOK
   42           | LPAREN_TOK BVLE_TOK an_term an_term RPAREN_TOK
   43           | LPAREN_TOK BVGT_TOK an_term an_term RPAREN_TOK
   44           | LPAREN_TOK BVGE_TOK an_term an_term RPAREN_TOK
   45           | LPAREN_TOK an_formula RPAREN_TOK
   46           | LPAREN_TOK NOT_TOK an_formula RPAREN_TOK
   47           | LPAREN_TOK IMPLIES_TOK an_formula an_formula RPAREN_TOK
   48           | LPAREN_TOK ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   49           | LPAREN_TOK AND_TOK an_formulas RPAREN_TOK
   50           | LPAREN_TOK OR_TOK an_formulas RPAREN_TOK
   51           | LPAREN_TOK XOR_TOK an_formula an_formula RPAREN_TOK
   52           | LPAREN_TOK IFF_TOK an_formula an_formula RPAREN_TOK
   53           | letexpr_mgmt an_formula RPAREN_TOK

   54 letexpr_mgmt: LPAREN_TOK LET_TOK LPAREN_TOK QUESTION_TOK STRING_TOK an_term RPAREN_TOK
   55             | LPAREN_TOK FLET_TOK LPAREN_TOK DOLLAR_TOK STRING_TOK an_formula RPAREN_TOK

   56 an_terms: an_term
   57         | an_terms an_term

   58 an_term: BVCONST_TOK
   59        | BVCONST_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   60        | an_nonbvconst_term

   61 an_nonbvconst_term: BITCONST_TOK
   62                   | var
   63                   | LPAREN_TOK an_term RPAREN_TOK
   64                   | SELECT_TOK an_term an_term
   65                   | STORE_TOK an_term an_term an_term
   66                   | BVEXTRACT_TOK LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK an_term
   67                   | ITE_TOK an_formula an_term an_term
   68                   | BVCONCAT_TOK an_term an_term
   69                   | BVNOT_TOK an_term
   70                   | BVNEG_TOK an_term
   71                   | BVAND_TOK an_term an_term
   72                   | BVOR_TOK an_term an_term
   73                   | BVXOR_TOK an_term an_term
   74                   | BVXNOR_TOK an_term an_term
   75                   | BVCOMP_TOK an_term an_term
   76                   | BVSUB_TOK an_term an_term
   77                   | BVPLUS_TOK an_terms
   78                   | BVMULT_TOK an_terms
   79                   | BVDIV_TOK an_term an_term
   80                   | BVMOD_TOK an_term an_term
   81                   | SBVDIV_TOK an_term an_term
   82                   | SBVREM_TOK an_term an_term
   83                   | SBVMOD_TOK an_term an_term
   84                   | BVNAND_TOK an_term an_term
   85                   | BVNOR_TOK an_term an_term
   86                   | BVLEFTSHIFT_1_TOK an_term an_term
   87                   | BVRIGHTSHIFT_1_TOK an_term an_term
   88                   | BVARITHRIGHTSHIFT_TOK an_term an_term
   89                   | BVROTATE_LEFT_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK an_term
   90                   | BVROTATE_RIGHT_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK an_term
   91                   | BVREPEAT_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK an_term
   92                   | BVSX_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK an_term
   93                   | BVZX_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK an_term

   94 sort_symb: BITVEC_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   95          | ARRAY_TOK LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK

   96 var: FORMID_TOK
   97    | TERMID_TOK
   98    | QUESTION_TOK TERMID_TOK

   99 fvar: DOLLAR_TOK FORMID_TOK
  100     | FORMID_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMERAL_TOK (258) 13 59 66 89 90 91 92 93 94 95
BVCONST_TOK (259) 58 59
BITCONST_TOK (260) 61
FORMID_TOK (261) 96 99 100
TERMID_TOK (262) 97 98
STRING_TOK (263) 3 13 14 28 29 54 55
USER_VAL_TOK (264) 20
SOURCE_TOK (265) 21
CATEGORY_TOK (266) 22
DIFFICULTY_TOK (267) 23
BITVEC_TOK (268) 94
ARRAY_TOK (269) 95
SELECT_TOK (270) 64
STORE_TOK (271) 65
TRUE_TOK (272) 32
FALSE_TOK (273) 33
NOT_TOK (274) 46
IMPLIES_TOK (275) 47
ITE_TOK (276) 48 67
AND_TOK (277) 49
OR_TOK (278) 50
XOR_TOK (279) 51
IFF_TOK (280) 52
EXISTS_TOK (281)
FORALL_TOK (282)
LET_TOK (283) 54
FLET_TOK (284) 55
NOTES_TOK (285)
CVC_COMMAND_TOK (286)
SORTS_TOK (287)
FUNS_TOK (288)
PREDS_TOK (289)
EXTENSIONS_TOK (290)
DEFINITION_TOK (291)
AXIOMS_TOK (292)
LOGIC_TOK (293) 9
COLON_TOK (294) 6 7 8 9 10 11 21 22 23 66 95
LBRACKET_TOK (295) 13 59 66 89 90 91 92 93 94 95
RBRACKET_TOK (296) 13 59 66 89 90 91 92 93 94 95
LPAREN_TOK (297) 2 10 11 28 29 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 54 55 63
RPAREN_TOK (298) 2 10 11 28 29 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 53 54 55 63
SAT_TOK (299) 15
UNSAT_TOK (300) 16
UNKNOWN_TOK (301) 17
ASSUMPTION_TOK (302) 6
FORMULA_TOK (303) 7
STATUS_TOK (304) 8
BENCHMARK_TOK (305) 2
EXTRASORTS_TOK (306)
EXTRAFUNS_TOK (307) 10
EXTRAPREDS_TOK (308) 11
LANGUAGE_TOK (309)
DOLLAR_TOK (310) 55 99
QUESTION_TOK (311) 54 98
DISTINCT_TOK (312) 36
SEMICOLON_TOK (313)
EOF_TOK (314)
EQ_TOK (315) 35
NAND_TOK (316)
NOR_TOK (317)
NEQ_TOK (318)
ASSIGN_TOK (319)
BV_TOK (320)
BOOLEAN_TOK (321)
BVLEFTSHIFT_1_TOK (322) 86
BVRIGHTSHIFT_1_TOK (323) 87
BVARITHRIGHTSHIFT_TOK (324) 88
BVPLUS_TOK (325) 77
BVSUB_TOK (326) 76
BVNOT_TOK (327) 69
BVMULT_TOK (328) 78
BVDIV_TOK (329) 79
SBVDIV_TOK (330) 81
BVMOD_TOK (331) 80
SBVREM_TOK (332) 82
SBVMOD_TOK (333) 83
BVNEG_TOK (334) 70
BVAND_TOK (335) 71
BVOR_TOK (336) 72
BVXOR_TOK (337) 73
BVNAND_TOK (338) 84
BVNOR_TOK (339) 85
BVXNOR_TOK (340) 74
BVCONCAT_TOK (341) 68
BVLT_TOK (342) 41
BVGT_TOK (343) 43
BVLE_TOK (344) 42
BVGE_TOK (345) 44
BVSLT_TOK (346) 37
BVSGT_TOK (347) 39
BVSLE_TOK (348) 38
BVSGE_TOK (349) 40
BVSX_TOK (350) 92
BVZX_TOK (351) 93
BVROTATE_RIGHT_TOK (352) 90
BVROTATE_LEFT_TOK (353) 89
BVREPEAT_TOK (354) 91
BVCOMP_TOK (355) 75
BOOLEXTRACT_TOK (356)
BOOL_TO_BV_TOK (357)
BVEXTRACT_TOK (358) 66


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
cmd (105)
    on left: 1, on right: 0
benchmark (106)
    on left: 2, on right: 1
bench_name (107)
    on left: 3, on right: 2
bench_attributes (108)
    on left: 4 5, on right: 2 5
bench_attribute (109)
    on left: 6 7 8 9 10 11 12, on right: 4 5
logic_name (110)
    on left: 13 14, on right: 9
status (111)
    on left: 15 16 17, on right: 8
annotation (112)
    on left: 18 19, on right: 12
user_value (113)
    on left: 20, on right: 19
attribute (114)
    on left: 21 22 23, on right: 18 19
sort_symbs (115)
    on left: 24 25, on right: 28
var_decls (116)
    on left: 26 27, on right: 10 11 27
var_decl (117)
    on left: 28 29, on right: 26 27
an_formulas (118)
    on left: 30 31, on right: 31 49 50
an_formula (119)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53, on right: 6 7 30 31 45 46 47 48 51 52 53 55 67
letexpr_mgmt (120)
    on left: 54 55, on right: 53
an_terms (121)
    on left: 56 57, on right: 36 57 77 78
an_term (122)
    on left: 58 59 60, on right: 35 37 38 39 40 41 42 43 44 54 56 57
    63 64 65 66 67 68 69 70 71 72 73 74 75 76 79 80 81 82 83 84 85
    86 87 88 89 90 91 92 93
an_nonbvconst_term (123)
    on left: 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87 88 89 90 91 92 93, on right: 60
sort_symb (124)
    on left: 94 95, on right: 24 25
var (125)
    on left: 96 97 98, on right: 62
fvar (126)
    on left: 99 100, on right: 34


state 0

    0 $accept: . cmd $end

    LPAREN_TOK  shift, and go to state 1

    cmd        go to state 2
    benchmark  go to state 3


state 1

    2 benchmark: LPAREN_TOK . BENCHMARK_TOK bench_name bench_attributes RPAREN_TOK

    BENCHMARK_TOK  shift, and go to state 4


state 2

    0 $accept: cmd . $end

    $end  shift, and go to state 5


state 3

    1 cmd: benchmark .

    $default  reduce using rule 1 (cmd)


state 4

    2 benchmark: LPAREN_TOK BENCHMARK_TOK . bench_name bench_attributes RPAREN_TOK

    STRING_TOK  shift, and go to state 6

    bench_name  go to state 7


state 5

    0 $accept: cmd $end .

    $default  accept


state 6

    3 bench_name: STRING_TOK .

    $default  reduce using rule 3 (bench_name)


state 7

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name . bench_attributes RPAREN_TOK

    COLON_TOK  shift, and go to state 8

    bench_attributes  go to state 9
    bench_attribute   go to state 10
    annotation        go to state 11
    attribute         go to state 12


state 8

    6 bench_attribute: COLON_TOK . ASSUMPTION_TOK an_formula
    7                | COLON_TOK . FORMULA_TOK an_formula
    8                | COLON_TOK . STATUS_TOK status
    9                | COLON_TOK . LOGIC_TOK logic_name
   10                | COLON_TOK . EXTRAFUNS_TOK LPAREN_TOK var_decls RPAREN_TOK
   11                | COLON_TOK . EXTRAPREDS_TOK LPAREN_TOK var_decls RPAREN_TOK
   21 attribute: COLON_TOK . SOURCE_TOK
   22          | COLON_TOK . CATEGORY_TOK
   23          | COLON_TOK . DIFFICULTY_TOK

    SOURCE_TOK      shift, and go to state 13
    CATEGORY_TOK    shift, and go to state 14
    DIFFICULTY_TOK  shift, and go to state 15
    LOGIC_TOK       shift, and go to state 16
    ASSUMPTION_TOK  shift, and go to state 17
    FORMULA_TOK     shift, and go to state 18
    STATUS_TOK      shift, and go to state 19
    EXTRAFUNS_TOK   shift, and go to state 20
    EXTRAPREDS_TOK  shift, and go to state 21


state 9

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name bench_attributes . RPAREN_TOK
    5 bench_attributes: bench_attributes . bench_attribute

    COLON_TOK   shift, and go to state 8
    RPAREN_TOK  shift, and go to state 22

    bench_attribute  go to state 23
    annotation       go to state 11
    attribute        go to state 12


state 10

    4 bench_attributes: bench_attribute .

    $default  reduce using rule 4 (bench_attributes)


state 11

   12 bench_attribute: annotation .

    $default  reduce using rule 12 (bench_attribute)


state 12

   18 annotation: attribute .
   19           | attribute . user_value

    USER_VAL_TOK  shift, and go to state 24

    $default  reduce using rule 18 (annotation)

    user_value  go to state 25


state 13

   21 attribute: COLON_TOK SOURCE_TOK .

    $default  reduce using rule 21 (attribute)


state 14

   22 attribute: COLON_TOK CATEGORY_TOK .

    $default  reduce using rule 22 (attribute)


state 15

   23 attribute: COLON_TOK DIFFICULTY_TOK .

    $default  reduce using rule 23 (attribute)


state 16

    9 bench_attribute: COLON_TOK LOGIC_TOK . logic_name

    STRING_TOK  shift, and go to state 26

    logic_name  go to state 27


state 17

    6 bench_attribute: COLON_TOK ASSUMPTION_TOK . an_formula

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 33
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 18

    7 bench_attribute: COLON_TOK FORMULA_TOK . an_formula

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 36
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 19

    8 bench_attribute: COLON_TOK STATUS_TOK . status

    SAT_TOK      shift, and go to state 37
    UNSAT_TOK    shift, and go to state 38
    UNKNOWN_TOK  shift, and go to state 39

    status  go to state 40


state 20

   10 bench_attribute: COLON_TOK EXTRAFUNS_TOK . LPAREN_TOK var_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 41


state 21

   11 bench_attribute: COLON_TOK EXTRAPREDS_TOK . LPAREN_TOK var_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 42


state 22

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name bench_attributes RPAREN_TOK .

    $default  reduce using rule 2 (benchmark)


state 23

    5 bench_attributes: bench_attributes bench_attribute .

    $default  reduce using rule 5 (bench_attributes)


state 24

   20 user_value: USER_VAL_TOK .

    $default  reduce using rule 20 (user_value)


state 25

   19 annotation: attribute user_value .

    $default  reduce using rule 19 (annotation)


state 26

   13 logic_name: STRING_TOK . LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   14           | STRING_TOK .

    LBRACKET_TOK  shift, and go to state 43

    $default  reduce using rule 14 (logic_name)


state 27

    9 bench_attribute: COLON_TOK LOGIC_TOK logic_name .

    $default  reduce using rule 9 (bench_attribute)


state 28

  100 fvar: FORMID_TOK .

    $default  reduce using rule 100 (fvar)


state 29

   32 an_formula: TRUE_TOK .

    $default  reduce using rule 32 (an_formula)


state 30

   33 an_formula: FALSE_TOK .

    $default  reduce using rule 33 (an_formula)


state 31

   35 an_formula: LPAREN_TOK . EQ_TOK an_term an_term RPAREN_TOK
   36           | LPAREN_TOK . DISTINCT_TOK an_terms RPAREN_TOK
   37           | LPAREN_TOK . BVSLT_TOK an_term an_term RPAREN_TOK
   38           | LPAREN_TOK . BVSLE_TOK an_term an_term RPAREN_TOK
   39           | LPAREN_TOK . BVSGT_TOK an_term an_term RPAREN_TOK
   40           | LPAREN_TOK . BVSGE_TOK an_term an_term RPAREN_TOK
   41           | LPAREN_TOK . BVLT_TOK an_term an_term RPAREN_TOK
   42           | LPAREN_TOK . BVLE_TOK an_term an_term RPAREN_TOK
   43           | LPAREN_TOK . BVGT_TOK an_term an_term RPAREN_TOK
   44           | LPAREN_TOK . BVGE_TOK an_term an_term RPAREN_TOK
   45           | LPAREN_TOK . an_formula RPAREN_TOK
   46           | LPAREN_TOK . NOT_TOK an_formula RPAREN_TOK
   47           | LPAREN_TOK . IMPLIES_TOK an_formula an_formula RPAREN_TOK
   48           | LPAREN_TOK . ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   49           | LPAREN_TOK . AND_TOK an_formulas RPAREN_TOK
   50           | LPAREN_TOK . OR_TOK an_formulas RPAREN_TOK
   51           | LPAREN_TOK . XOR_TOK an_formula an_formula RPAREN_TOK
   52           | LPAREN_TOK . IFF_TOK an_formula an_formula RPAREN_TOK
   54 letexpr_mgmt: LPAREN_TOK . LET_TOK LPAREN_TOK QUESTION_TOK STRING_TOK an_term RPAREN_TOK
   55             | LPAREN_TOK . FLET_TOK LPAREN_TOK DOLLAR_TOK STRING_TOK an_formula RPAREN_TOK

    FORMID_TOK    shift, and go to state 28
    TRUE_TOK      shift, and go to state 29
    FALSE_TOK     shift, and go to state 30
    NOT_TOK       shift, and go to state 44
    IMPLIES_TOK   shift, and go to state 45
    ITE_TOK       shift, and go to state 46
    AND_TOK       shift, and go to state 47
    OR_TOK        shift, and go to state 48
    XOR_TOK       shift, and go to state 49
    IFF_TOK       shift, and go to state 50
    LET_TOK       shift, and go to state 51
    FLET_TOK      shift, and go to state 52
    LPAREN_TOK    shift, and go to state 31
    DOLLAR_TOK    shift, and go to state 32
    DISTINCT_TOK  shift, and go to state 53
    EQ_TOK        shift, and go to state 54
    BVLT_TOK      shift, and go to state 55
    BVGT_TOK      shift, and go to state 56
    BVLE_TOK      shift, and go to state 57
    BVGE_TOK      shift, and go to state 58
    BVSLT_TOK     shift, and go to state 59
    BVSGT_TOK     shift, and go to state 60
    BVSLE_TOK     shift, and go to state 61
    BVSGE_TOK     shift, and go to state 62

    an_formula    go to state 63
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 32

   99 fvar: DOLLAR_TOK . FORMID_TOK

    FORMID_TOK  shift, and go to state 64


state 33

    6 bench_attribute: COLON_TOK ASSUMPTION_TOK an_formula .

    $default  reduce using rule 6 (bench_attribute)


state 34

   53 an_formula: letexpr_mgmt . an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 65
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 35

   34 an_formula: fvar .

    $default  reduce using rule 34 (an_formula)


state 36

    7 bench_attribute: COLON_TOK FORMULA_TOK an_formula .

    $default  reduce using rule 7 (bench_attribute)


state 37

   15 status: SAT_TOK .

    $default  reduce using rule 15 (status)


state 38

   16 status: UNSAT_TOK .

    $default  reduce using rule 16 (status)


state 39

   17 status: UNKNOWN_TOK .

    $default  reduce using rule 17 (status)


state 40

    8 bench_attribute: COLON_TOK STATUS_TOK status .

    $default  reduce using rule 8 (bench_attribute)


state 41

   10 bench_attribute: COLON_TOK EXTRAFUNS_TOK LPAREN_TOK . var_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 66

    var_decls  go to state 67
    var_decl   go to state 68


state 42

   11 bench_attribute: COLON_TOK EXTRAPREDS_TOK LPAREN_TOK . var_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 66

    var_decls  go to state 69
    var_decl   go to state 68


state 43

   13 logic_name: STRING_TOK LBRACKET_TOK . NUMERAL_TOK RBRACKET_TOK

    NUMERAL_TOK  shift, and go to state 70


state 44

   46 an_formula: LPAREN_TOK NOT_TOK . an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 71
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 45

   47 an_formula: LPAREN_TOK IMPLIES_TOK . an_formula an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 72
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 46

   48 an_formula: LPAREN_TOK ITE_TOK . an_formula an_formula an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 73
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 47

   49 an_formula: LPAREN_TOK AND_TOK . an_formulas RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formulas   go to state 74
    an_formula    go to state 75
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 48

   50 an_formula: LPAREN_TOK OR_TOK . an_formulas RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formulas   go to state 76
    an_formula    go to state 75
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 49

   51 an_formula: LPAREN_TOK XOR_TOK . an_formula an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 77
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 50

   52 an_formula: LPAREN_TOK IFF_TOK . an_formula an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 28
    TRUE_TOK    shift, and go to state 29
    FALSE_TOK   shift, and go to state 30
    LPAREN_TOK  shift, and go to state 31
    DOLLAR_TOK  shift, and go to state 32

    an_formula    go to state 78
    letexpr_mgmt  go to state 34
    fvar          go to state 35


state 51

   54 letexpr_mgmt: LPAREN_TOK LET_TOK . LPAREN_TOK QUESTION_TOK STRING_TOK an_term RPAREN_TOK

    LPAREN_TOK  shift, and go to state 79


state 52

   55 letexpr_mgmt: LPAREN_TOK FLET_TOK . LPAREN_TOK DOLLAR_TOK STRING_TOK an_formula RPAREN_TOK

    LPAREN_TOK  shift, and go to state 80


state 53

   36 an_formula: LPAREN_TOK DISTINCT_TOK . an_terms RPAREN_TOK

    BVCONST_TOK            shift, and go to state 81
    BITCONST_TOK           shift, and go to state 82
    FORMID_TOK             shift, and go to state 83
    TERMID_TOK             shift, and go to state 84
    SELECT_TOK             shift, and go to state 85
    STORE_TOK              shift, and go to state 86
    ITE_TOK                shift, and go to state 87
    LPAREN_TOK             shift, and go to state 88
    QUESTION_TOK           shift, and go to state 89
    BVLEFTSHIFT_1_TOK      shift, and go to state 90
    BVRIGHTSHIFT_1_TOK     shift, and go to state 91
    BVARITHRIGHTSHIFT_TOK  shift, and go to state 92
    BVPLUS_TOK             shift, and go to state 93
    BVSUB_TOK              shift, and go to state 94
    BVNOT_TOK              shift, and go to state 95
    BVMULT_TOK             shift, and go to state 96
    BVDIV_TOK              shift, and go to state 97
    SBVDIV_TOK             shift, and go to state 98
    BVMOD_TOK              shift, and go to state 99
    SBVREM_TOK             shift, and go to state 100
    SBVMOD_TOK             shift, and go to state 101
    BVNEG_TOK              shift, and go to state 102
    BVAND_TOK              shift, and go to state 103
    BVOR_TOK               shift, and go to state 104
    BVXOR_TOK              shift, and go to state 105
    BVNAND_TOK             shift, and go to state 106
    BVNOR_TOK              shift, and go to state 107
    BVXNOR_TOK             shift, and go to state 108
    BVCONCAT_TOK           shift, and go to state 109
    BVSX_TOK               shift, and go to state 110
    BVZX_TOK               shift, and go to state 111
    BVROTATE_RIGHT_TOK     shift, and go to state 112
    BVROTATE_LEFT_TOK      shift, and go to state 113
    BVREPEAT_TOK           shift, and go to state 114
    BVCOMP_TOK             shift, and go to state 115
    BVEXTRACT_TOK          shift, and go to state 116

    an_terms            go to state 117
    an_term             go to state 118
    an_nonbvconst_term  go to state 119
    var                 go to state 120


state 54

   35 an_formula: LPAREN_TOK EQ_TOK . an_term an_term RPAREN_TOK

    BVCONST_TOK            shift, and go to state 81
    BITCONST_TOK           shift, and go to state 82
    FORMID_TOK             shift, and go to state 83
    TERMID_TOK             shift, and go to state 84
    SELECT_TOK             shift, and go to state 85
    STORE_TOK              shift, and go to state 86
    ITE_TOK                shift, and go to state 87
    LPAREN_TOK             shift, and go to state 88
    QUESTION_TOK           shift, and go to state 89
    BVLEFTSHIFT_1_TOK      shift, and go to state 90
    BVRIGHTSHIFT_1_TOK     shift, and go to state 91
    BVARITHRIGHTSHIFT_TOK  shift, and go to state 92
    BVPLUS_TOK             shift, and go to state 93
    BVSUB_TOK              shift, and go to state 94
    BVNOT_TOK              shift, and go to state 95
    BVMULT_TOK             shift, and go to state 96
    BVDIV_TOK              shift, and go to state 97
    SBVDIV_TOK             shift, and go to state 98
    BVMOD_TOK              shift, and go to state 99
    SBVREM_TOK             shift, and go to state 100
    SBVMOD_TOK             shift, and go to state 101
    BVNEG_TOK              shift, and go to state 102
    BVAND_TOK              shift, and go to state 103
    BVOR_TOK               shift, and go to state 104
    BVXOR_TOK              shift, and go to state 105
    BVNAND_TOK             shift, and go to state 106
    BVNOR_TOK              shift, and go to state 107
    BVXNOR_TOK             shift, and go to state 108
    BVCONCAT_TOK           shift, and go to state 109
    BVSX_TOK               shift, and go to state 110
    BVZX_TOK               shift, and go to state 111
    BVROTATE_RIGHT_TOK     shift, and go to state 112
    BVROTATE_LEFT_TOK      shift, and go to state 113
    BVREPEAT_TOK           shift, and go to state 114
    BVCOMP_TOK             shift, and go to state 115
    BVEXTRACT_TOK          shift, and go to state 116

    an_term             go to state 121
    an_nonbvconst_term  go to state 119
    var                 go to state 120


state 55

   41 an_formula: LPAREN_TOK BVLT_TOK . an_term an_term RPAREN_TOK

    BVCONST_TOK            shift, and go to state 81
    BITCONST_TOK           shift, and go to state 82
    FORMID_TOK             shift, and go to state 83
    TERMID_TOK             shift, and go to state 84
    SELECT_TOK             shift, and go to state 85
    STORE_TOK              shift, and go to state 86
    ITE_TOK                shift, and go to state 87
    LPAREN_TOK             shift, and go to state 88
    QUESTION_TOK           shift, and go to state 89
    BVLEFTSHIFT_1_TOK      shift, and go to state 90
    BVRIGHTSHIFT_1_TOK     shift, and go to state 91
    BVARITHRIGHTSHIFT_TOK  shift, and go to state 92
    BVPLUS_TOK             shift, and go to state 93
    BVSUB_TOK              shift, and go to state 94
    BVNOT_TOK              shift, and go to state 95
    BVMULT_TOK             shift, and go to state 96
    BVDIV_TOK              shift, and go to state 97
    SBVDIV_TOK             shift, and go to state 98
    BVMOD_TOK              shift, and go to state 99
    SBVREM_TOK             shift, and go to state 100
    SBVMOD_TOK             shift, and go to state 101
    BVNEG_TOK              shift, and go to state 102
    BVAND_TOK              shift, and go to state 103
    BVOR_TOK               shift, and go to state 104
    BVXOR_TOK              shift, and go to state 105
    BVNAND_TOK             shift, and go to state 106
    BVNOR_TOK              shift, and go to state 107
    BVXNOR_TOK             shift, and go to state 108
    BVCONCAT_TOK           shift, and go to state 109
    BVSX_TOK               shift, and go to state 110
    BVZX_TOK               shift, and go to state 111
    BVROTATE_RIGHT_TOK     shift, and go to state 112
    BVROTATE_LEFT_TOK      shift, and go to state 113
    BVREPEAT_TOK           shift, and go to state 114
    BVCOMP_TOK             shift, and go to state 115
    BVEXTRACT_TOK          shift, and go to state 116

    an_term             go to state 122
    an_nonbvconst_term  go to state 119
    var                 go to state 120


state 56

   43 an_formula: LPAREN_TOK BVGT_TOK . an_term an_term RPAREN_TOK
